# instagram

./: .env.example  ARCHITECTURE.md  Makefile  README.md  REFACTORING.md  docker-compose.yml  pyproject.toml
api-gateway/: .dockerignore  .env.example  Dockerfile  README.md  go.mod  go.sum  main.go
api-gateway/config/: config.go
api-gateway/middleware/: auth.go  logger.go  ratelimit.go
api-gateway/proxy/: proxy.go
api-gateway/router/: router.go
auth-service/: README.md  pyproject.toml  requirements.txt
auth-service/auth_service/: main.py
auth-service/auth_service/api/: __init__.py  subscription.py  token.py  users.py
auth-service/auth_service/middlewares/: __init__.py  request_id.py  request_logger.py
auth-service/auth_service/schemas/: __init__.py
auth-service/auth_service/security/: __init__.py  hashing.py
auth-service/auth_service/utils/: __init__.py  logging.py  singleton.py
auth_service/: Dockerfile  config.py  database.py  dependencies.py  main.py  pyproject.toml  schemas.py
auth_service/api/: dependencies.py
auth_service/api/routes/: auth.py  users.py
auth_service/application/: services.py
auth_service/domain/: models.py  repositories.py
auth_service/infrastructure/: auth.py
auth_service/infrastructure/database/: connection.py  repositories.py
discovery-service/: README.md  export_requirements_from_poetry.sh  main.py  pyproject.toml  requirements.txt  start.sh
discovery-service/discovery_service/: auth.py  database.py  main.py  schemas.py
discovery-service/discovery_service/application/: services.py
discovery-service/discovery_service/domain/: models.py
graph-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
graph-service/docs/: DATABASE_ARCHITECTURE.md
graph-service/graph_service/: __init__.py  cache.py  config.py  database.py  dependencies.py  kafka_producer.py  main.py  schemas.py  service.py
graph-service/graph_service/domain/: __init__.py  models.py
graph-service/migrations/: 001_create_follows_table.sql
graph-service/scripts/: apply_migration.sh
media-service/: Dockerfile  pyproject.toml
media-service/media_server/: auth.py  config.py  database.py  main.py  schemas.py
media-service/media_server/api/: __init__.py
media-service/media_server/application/: __init__.py  services.py
media-service/media_server/domain/: __init__.py  models.py  repositories.py
media-service/media_server/infrastructure/: __init__.py  image_processor.py  storage.py
media-service/media_server/infrastructure/database/: connection.py  repositories.py
newsfeed-service/: .env.example  Dockerfile  README.md  pyproject.toml
newsfeed-service/newsfeed_service/: __init__.py  cache.py  config.py  database.py  dependencies.py  kafka_consumer.py  kafka_producer.py  main.py  schemas.py  service.py  service_client.py
pgdog/: README.md  docker-compose.yml
pgdog/docker/: graph_service_schema.sql  instagram_schema_extension.sql  pgdog.toml  setup.sql  users.toml
post-service/: .env.example  Dockerfile  README.md  pyproject.toml
post-service/post_service/: __init__.py  auth.py  config.py  database.py  kafka_producer.py  main.py  schemas.py
scripts/: init-db.sql
service-discovery/: main.py  pyproject.toml
