[project]
name = "instagram"
version = "0.1.0"
description = "Instagram from scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofile>=3.9.0",
    "boto3>=1.38.35",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "kazoo>=2.10.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]

[tool.uv.workspace]
members = [
    "auth-service",
    "media-service",
    "discovery-service",
]
