[tool.poetry]
name = "discovery-service"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "discovery_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
bs4 = "^0.0.1"
uvicorn = "^0.23.2"
prometheus-fastapi-instrumentator = "^6.1.0"
kazoo = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
