[project]
name = "discovery-service"
version = "0.1.0"
description = "Instagram Clone Discovery Service for user and content discovery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.12",
    "kazoo>=2.10.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "uvicorn>=0.34.3",
    "httpx>=0.25.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]
