[tool.poetry]
name = "media-server"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "media_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
boto3 = "^1.28.62"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
