[project]
name = "post-service"
version = "0.1.0"
description = "Instagram Clone Post Service with MongoDB and Kafka"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "motor>=3.3.2",
    "pymongo>=4.6.1",
    "aiokafka>=0.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]
